# code_system

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  architecture.md  error_system_improvements.md
docs/api/: core.md  i18n.md  plugin.md  utils.md
examples/: CMakeLists.txt  demo.cc  demo_01.cc  demo_02.cc
include/: error_system.h
include/error_system/core/: error_builder.h  error_code.h  error_config.h  error_context.h  error_level.h  error_registry.h  module.h  result_t.h  subsystem.h
include/error_system/domain/: system_domain.h
include/error_system/error_codes/: application_error.h  common_error.h  database_error.h  kernel_error.h  middleware_error.h  network_error.h  service_error.h  storage_error.h  system_error.h
script/: generate_i18n.sh  generate_traits.sh  generate_translator.sh  generate_umbrella_traits.sh
script/script_py/: generate_i18n.py  generate_traits.py  generate_translator.py  generate_umbrella_traits.py
src/core/: error_context.cc
src/i18n/: json_translator.cc  translator_registry.cc
src/plugin/: plugin_registry.cc
src/utils/: file_utils.cc  json_lexer.cc  json_utils.cc  stack_trace_utils.cc  string_utils.cc
tests/: CMakeLists.txt
tests/core/: error_context_test.cc  result_test.cc
tests/i18n/: json_translator_test.cc  translator_registry_test.cc
tests/plugin/: plugin_registry_test.cc
tests/traits/: module_traits_test.cc  subsystem_traits_test.cc
tests/utils/: file_utils_test.cc  json_utils_test.cc  stack_trace_utils_test.cc  string_utils_test.cc
(+170 files in other folders)
